Worked on Android 8.0

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.smsreceiver">
 
     <uses-permission android:name="android.permission.RECEIVE_SMS"> </uses-permission>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <application
         android:allowBackup="true"
@@ -17,9 +18,7 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED">
-
-                </action>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
 
             </intent-filter>
 
